--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
         cargo audit --ignore-yaml --format json > audit-results.json || true
 
     - name: Upload security results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: security-audit-results
         path: audit-results.json
@@ -94,6 +94,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc-aarch64-linux-gnu
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
       with:
@@ -101,9 +106,11 @@ jobs:
 
     - name: Build release binary
       run: cargo build --release --target ${{ matrix.target }}
+      env:
+        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
     - name: Upload release artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: zthfs-${{ matrix.target }}
         path: target/${{ matrix.target }}/release/zthfs
@@ -128,7 +135,7 @@ jobs:
         # Add link checking here if needed
 
     - name: Upload documentation
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: documentation
         path: target/doc/
@@ -166,11 +173,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@nightly
+      with:
+        components: llvm-tools-preview
 
     - name: Install performance tools
       run: |
-        cargo install cargo-profdata
         cargo install cargo-flamegraph
 
     - name: Run performance benchmarks
@@ -182,7 +190,7 @@ jobs:
         cargo flamegraph --bin zthfs -- demo
 
     - name: Upload performance results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: performance-results
         path: |
