--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ base64 = "0.22"
 regex = "1.0"
 chrono = "0.4"
 clap = { version = "4.0", features = ["derive"] }
+dashmap = "5.5"
 
 [dev-dependencies]
 tempfile = "3.0"
@@ -51,3 +52,4 @@ debug = false
 lto = true
 codegen-units = 1
 panic = "abort"
+target-cpu = "native"
