--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 fuser = "0.16.0"
 aes-gcm = "0.10"
 crc32c = "0.6"
+blake3 = "1.8.2"
 log = "0.4"
 env_logger = "0.11.8"
 serde = { version = "1.0", features = ["derive"] }
