--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,12 @@ typenum = "1.18"
 xattr = "1.0"
 tempfile = "3.0"
 base64 = "0.22"
-regex = "1.0"
+regex = "1.11.3"
 chrono = "0.4"
 clap = { version = "4.0", features = ["derive"] }
 dashmap = "6.1.0"
+tokio = { version = "1.47.1", features = ["full"] }
+crossbeam-channel = "0.5"
 
 [dev-dependencies]
 tempfile = "3.0"
