--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.0", features = ["derive"] }
 dashmap = "6.1.0"
 tokio = { version = "1.47.1", features = ["full"] }
 crossbeam-channel = "0.5"
+sled="0.34.7"
 
 [dev-dependencies]
 tempfile = "3.0"
