--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,14 @@ edition = "2024"
 default = []
 # Enable production mode with additional security checks
 production = []
+# Enable HSM (Hardware Security Module) support
+# Currently a stub feature for future implementation
+hsm = []
+# Enable KMS (Key Management Service) support
+# Currently a stub feature for future implementation
+kms = []
+# Enable all key management features
+keyring = ["hsm", "kms"]
 
 [dependencies]
 fuser = "0.16.0"
@@ -31,6 +39,10 @@ dashmap = "6.1.0"
 tokio = { version = "1.47.1", features = ["full"] }
 crossbeam-channel = "0.5"
 sled="0.34.7"
+# Constant-time comparisons for timing attack protection
+subtle = "2.6"
+# Serialization for WAL
+bincode = "1.3"
 
 [dev-dependencies]
 tempfile = "3.0"
