--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ bincode = "1.3"
 [dev-dependencies]
 tempfile = "3.0"
 criterion = "0.7.0"
+# Property-based testing framework
+proptest = "1.4"
 
 [[bench]]
 name = "crypto_benchmarks"
